# Json_Promting_Convertor

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BMAD_IMPLEMENTATION_PLAN.md  CHATBOT_INTEGRATION_GUIDE.md  CLAUDE.md  Complex Ambiguous Prompts-30-more-output.txt  Complex Ambiguous Prompts-30-more.txt  Complex Ambiguous Prompts.txt  DOWNLOAD_GUIDE.md  Dockerfile  PROJECT_STATUS_REPORT.md  README.md  README_PYTHON_FILES.md  README_TOON_CONVERSION.md  REAL_WORLD_INTEGRATION_GUIDE.md  TOON.txt  TOON_CONVERSION_COMPLETE_SUMMARY.md  TOON_TESTING_GUIDE.md  WORKING_SOLUTION.md  alembic.ini  api_endpoints_toon.py  batch_test_toon.py  enhanced_toon_chatbot.py  interactive_tester.py  interactive_toon_test.py  json_assistant_cli.py  json_vs_toon_comparison.py  llm_toon_chatbot.py  pyproject.toml  requirements.txt  simple_toon_chatbot.py  structured_assistant_cli.py  test_api_toon.py  test_comprehensive.py  test_llm_integration.py  test_parser_quick.py  test_simple.py  test_toon_conversion.py  (+6 more)
.claude/commands/: architect.md
alembic/: env.py
alembic/versions/: 20251015_1944_7c0edb214358_initial_schema_create_api_keys_request_.py
docs/: APPLICATION_DESCRIPTION.md  ARCHITECTURE.md  EPICS_AND_STORIES.md  MASTER_CHECKLIST.md  MONITORING_GUIDE.md  NEXT_STEPS_ROADMAP.md  PERFORMANCE_TEST_RESULTS.md  schema_examples.md
docs/architecture/: 01-overview.md  02-components.md  README.md
docs/runbooks/: APIDown.md  HighErrorRate.md  RUNBOOK_INDEX.md
load_tests/: README.md
new_JSON_Promtpting/: assistant_cli-old.py  check_models.py
old/: Json_prompt_Claude_Overview.md  \.json  final_enhanced_converter-old.py  fixed_enhanced_json_converter.py  fixed_enhanced_json_converter_LLM.py  how_to_use_guide.md  llm-test-01.json  test_llm_01.json  test_out_01.json  test_output-02.json
old-II/: Complex Ambiguous Prompts-outputs.txt  NL_JSON_XML_Overview  PRD_STRUCTURED_PROMPT_SERVICE.md  README.md  TOON_CONVERSION_STRATEGY.md  TOON_QUICK_START_GUIDE.md  docker-compose.yml  json_vs_toon_comparison.py  requirements-dev.txt  requirements.txt  test_results.csv  toon_parser.py  toon_prompts.py
old-II/src/: main.py
research/: experiment_runner.py
scripts/: dev.sh
src/: __init__.py
tests/: test_schemas.py
(+45 files in other folders)
